--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,26 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CashOutFragment"
+    tools:context=".main.HomeFragment"
     android:orientation="vertical">
-
-    <!-- TODO: Update blank fragment layout -->
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CASH OUT"
+        android:text="HOME"
         android:textSize="40dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_successful_cash_out"
+        android:id="@+id/btn_pay_to_contact"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cash out exitoso"/>
+        android:layout_height="56dp"
+        android:text="Pay to Contact"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_failed_cash_out"
+        android:id="@+id/btn_cash_out"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cash out fallido"/>
+        android:layout_height="56dp"
+        android:text="Cash Out"/>
 
 </LinearLayout>
